--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
@@ -64,15 +64,16 @@
 }
 
 ul.js-facets-checkbox-links + a::before {
-  font-family: "Glyphicons Halflings";
-  content: "\e114";
+  font-family: "Font Awesome 5 Free";
+  content: "\f067";
   display: inline-block;
-  font-size: small;
-  margin: 0 4px 0 1px;
-  vertical-align: text-bottom;
+  font-size: 11px;
+  font-weight: 900;
+  margin: 0 .25rem;
+  vertical-align: baseline;
 }
 ul.js-facets-checkbox-links + a.open::before {
-  content: "\e113";
+  content: "\f068";
 }
 .facet-item:hover,
 .facet-item:hover input,
