NBNP-355 Attach holding display library to publication twig template

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -68,10 +68,13 @@
  * @ingroup themeable
  */
 #}
+{{ attach_library('newspapers_core/holding-display') }}
+{% set holdingSoftLimit = 1 %}
+
 {% if back_link %}
-    <div class="mb-3">
-        {{ back_link }}
-    </div>
+<div class="mb-3">
+    {{ back_link }}
+</div>
 {% endif %}
 
 {% if view_mode == 'featured' %}
