NBNP-331 Reduce holding paragraph and list item whitespace

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -529,11 +529,15 @@ a.back-link::before {
 
         &:after {
           content: "\2002";
-          font-size: 1rem;
+          font-size: .75rem;
         }
 
-        div > p:last-child {
-          margin-bottom: 0;
+        div > p {
+          margin: .75rem 0;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
         }
       }
     }
