NBNP-331 Display adjustment for holding bullet :after

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -529,7 +529,8 @@ a.back-link::before {
 
         &:after {
           content: "\2002";
-          font-size: .25rem;
+          display: block;
+          font-size: .5rem;
         }
 
         div > p {
