--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -497,6 +497,7 @@ a.back-link::before {
   display: inline-block;
   font-weight: 900;
   margin-right: 0.25em;
+  opacity: .75;
 }
 
 /* Holdings */
