--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -512,6 +512,19 @@ a.back-link::before {
 
     &:focus,
     &:hover {
+      box-shadow: none;
+      color: $link-color-hover;
+      text-decoration: none;
+    }
+
+    & span {
+      border-bottom-style: dashed;
+      border-bottom-width: 1px;
+    }
+  }
+
+  button:not([data-toggle="tooltip"]) {
+    &:hover {
       text-decoration: underline;
     }
   }
