NBNP-357 Change mouse cursor to 'help' on tooltip-enabled hover

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -514,6 +514,7 @@ a.back-link::before {
     &:hover {
       box-shadow: none;
       color: $link-color-hover;
+      cursor : help;
       text-decoration: none;
     }
 
