NBNP-361 Update no holdings results text

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -451,7 +451,7 @@
                {% else %}
                    <div class="text-muted">
                        <small><i class="glyphicon glyphicon-info-sign"></i></small>
-                        {% trans %}No digital holdings. See Microform staff.{% endtrans %}
+                        {% trans %}No holdings found. Consult staff.{% endtrans %}
                    </div>
                {% endif %}
             </div>
